base/src/test/resources/failure/patterns/split-on-nondata.aya.txt
In file $FILE:2:3 ->

  1 | def test (a : Type) : Type
  2 |  | x y => a
         ^-^

Error: Cannot split on a non-inductive type `Type` with a constructor pattern `x
       y`
In file $FILE:2:3 ->

  1 | def test (a : Type) : Type
  2 |  | x y => a
         ^-^

Error: Unknown constructor `x y`
What are you doing?
